add script tags to index.html

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -13,18 +13,26 @@
       <h1>Play Hangman!</h1>
     </header>
 
+    <div class="wordInput">
     word input
     submit button
-
-    <div id="letterBoxes">
     </div>
 
+    <div class="letterBoxes">
+    </div>
+
+    <div class="guess">
     letter guess box
     submit button
+    </div>
 
+    <div class="trash">
     wrong guesses container
+    </div>
 
+    <div class="gallows">
     hangman pixelart container
+    </div>
 
   </body>
 </html>
