--- a/front_end/index.html
+++ b/front_end/index.html
@@ -16,6 +16,11 @@
     <div class="wordInput">
     word input
     submit button
+      <form>
+        <p class="word">Player 1, enter your secret word:</p>
+        <input type="text" name="word">
+        <p class="button"><input type="submit" value="Submit"></p>
+      </form>
     </div>
 
     <div class="letterBoxes">
@@ -34,5 +39,8 @@
     hangman pixelart container
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
   </body>
 </html>
